# C-Project-

./: README.md
C++FinalProject2022/: CMakeLists.txt
C++FinalProject2022/C++FinalProject2022/: C++FinalProject2022.cpp  C++FinalProject2022.h  CMakeLists.txt  CovidtestRecord.h  Patient.h
